--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from kos.sh/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 11 Feb 2025 12:47:39 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
@@ -11,7 +8,7 @@
     <title>KOS squad</title>
     <link rel="stylesheet" type="text/css" href="lurk%20squad_files/public.css"> 
     <link rel="stylesheet" href="lurk%20squad_files/animate.min.css">
-    <link rel="icon" type="image/x-icon" href="../easyfiles.cc/2025/2/c7cf721a-ac8c-42b0-9d52-b904b47567a0/O5Hm52M6Phk4xxmwCb7HbvPHKfkSK9PokM47qi6tK459uNdzgZDuo0aQtsNetv.png">
+    <link rel="icon" type="image/x-icon" href="easyfiles.cc/2025/2/c7cf721a-ac8c-42b0-9d52-b904b47567a0/O5Hm52M6Phk4xxmwCb7HbvPHKfkSK9PokM47qi6tK459uNdzgZDuo0aQtsNetv.png">
     <style>
         body {
             margin: 0;
@@ -105,7 +102,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../i.pinimg.com/736x/bd/92/a8/bd92a85a6d472da5575d80555b6e1357.jpg');
+            background-image: url('i.pinimg.com/736x/bd/92/a8/bd92a85a6d472da5575d80555b6e1357.jpg');
             background-size: cover;
             background-position: center;
             z-index: -1;
@@ -148,7 +145,7 @@
     <div class="container" id="container" style="display: none;">
         <div class="profile-row">
             <div class="profile-container" id="container-crime">
-                <img src="../easyfiles.cc/2025/2/33f903f9-076a-4ff0-8d36-5840356de55a/img123.jpg" alt="crime's Profile Picture" class="profile-pic">
+                <img src="easyfiles.cc/2025/2/33f903f9-076a-4ff0-8d36-5840356de55a/img123.jpg" alt="crime's Profile Picture" class="profile-pic">
                 <h2 class="animated bounceInDown" id="label-crime">Crime</h2>
                 <div class="social-icons">
                     <a href="https://t.me/crimekos" target="_blank">
@@ -161,7 +158,7 @@
             </div>
 
             <div class="profile-container" id="container-coffin">
-                <img src="../easyfiles.cc/2025/2/7802d9bb-b2c1-4a10-bc6c-5ac8bd7d04af/photo_2025-02-10_16-37-12.jpg" alt="Coffin's Profile Picture" class="profile-pic">
+                <img src="easyfiles.cc/2025/2/7802d9bb-b2c1-4a10-bc6c-5ac8bd7d04af/photo_2025-02-10_16-37-12.jpg" alt="Coffin's Profile Picture" class="profile-pic">
                 <h2 class="animated bounceInDown" id="label-coffin">Coffin</h2>
                 <div class="social-icons">
                     <a href="https://t.me/coffinritual" target="_blank">
@@ -174,7 +171,7 @@
             </div>
 
             <div class="profile-container" id="container-cursed">
-                <img src="../easyfiles.cc/2025/2/144c8a70-56a7-42e2-9680-725f72ee70d5/photo_2025-02-10_22-56-55.jpg" alt="Cursed's Profile Picture" class="profile-pic">
+                <img src="easyfiles.cc/2025/2/144c8a70-56a7-42e2-9680-725f72ee70d5/photo_2025-02-10_22-56-55.jpg" alt="Cursed's Profile Picture" class="profile-pic">
                 <h2 class="animated bounceInDown" id="label-cursed">Cursed</h2>
                 <div class="social-icons">
                     <a href="https://t.me/ruinedtrust" target="_blank">
