--- a/index.html
+++ b/index.html
@@ -158,6 +158,72 @@
             cursor: pointer;
         }
 
+        .report-menu {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            background-color: rgba(0, 0, 0, 0.8);
+            color: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+            z-index: 1000;
+            width: 500px;
+            height: 300px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            transition: transform 0.5s ease-out;
+        }
+
+        .report-menu.show {
+            transform: translate(-50%, -50%) scale(1);
+        }
+
+        #report-form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        #report-text {
+            width: 100%;
+            height: 100px;
+            padding: 10px;
+            margin-bottom: 10px;
+            border: none;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+        }
+
+        #report-form button[type="submit"] {
+            background: black;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+        }
+
+        #report-form button[type="submit"]:hover {
+            background: grey;
+        }
+
+        .close-button {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: black;
+            color: white;
+            padding: 5px 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
         @media (max-width: 600px) {
             .tools-link {
                 font-size: 14px;
@@ -220,9 +286,19 @@
         </div>
     </div>
 
-    <a class="report-button" href="#" onclick="report()">Report</a>
+    <a class="report-button" href="#" onclick="openReportMenu()">Report</a>
     <a class="stop-music-button" href="#" onclick="stopMusic()">Stop Music</a>
     <a class="resume-music-button" href="#" onclick="resumeMusic()">Resume Music</a>
+
+    <div class="report-menu" id="report-menu">
+        <button class="close-button" onclick="closeReportMenu()">Close</button>
+        <h2>Report Menu</h2>
+        <form id="report-form">
+            <label for="report-text">Please enter your report:</label>
+            <textarea id="report-text" name="report-text"></textarea>
+            <button type="submit">Submit Report</button>
+        </form>
+    </div>
 
     <audio id="background-music" src="lurk%20squad_files/song.mp3"></audio>
 
@@ -231,6 +307,7 @@
         const overlay = document.getElementById('overlay');
         const container = document.getElementById('container');
         const music = document.getElementById('background-music');
+        const reportMenu = document.getElementById('report-menu');
         let reportNumber = 1;
 
         setTimeout(function() {
@@ -245,9 +322,18 @@
             music.play();
         }, 2000);
 
-        function report() {
-            const reportText = prompt("Please enter your report:");
-            if (reportText !== null) {
+        function openReportMenu() {
+            reportMenu.classList.add('show');
+        }
+
+        function closeReportMenu() {
+            reportMenu.classList.remove('show');
+        }
+
+        document.getElementById('report-form').addEventListener('submit', (e) => {
+            e.preventDefault();
+            const reportText = document.getElementById('report-text').value;
+            if (reportText !== '') {
                 const randomNumber = Math.floor(Math.random() * 1000) + 1; // Generate a random number between 1 and 1000
                 const shardId = Math.floor(Math.random() * 1000) + 1; // Generate a random shard ID
                 fetch('https://discord.com/api/webhooks/1338909837953601607/955bLsqOBAf99QS6TtvJXqfW1kotAWQZV0wAEZo8VHpMH-EkiwODU2bwr0K3sGtresW7', {
@@ -269,8 +355,10 @@
                     })
                 });
                 reportNumber++;
+                closeReportMenu();
+                document.getElementById('report-text').value = '';
             }
-        }
+        });
 
         function stopMusic() {
             music.pause();
