--- a/index.html
+++ b/index.html
@@ -284,6 +284,60 @@
                 </div>
             </div>
         </div>
+
+        <div class="profile-row">
+            <div class="profile-container" id="container-evi">
+                <img src="easyfiles.cc/2025/2/3f3b8aa0-7000-4761-a781-3b6e53e491a9/photo_2025-02-11_15-33-46.jpg" alt="evi's Profile Picture" class="profile-pic">
+                <h2 class="animated bounceInDown" id="label-evi">Evi</h2>
+                <div class="social-icons">
+                    <a href="https://t.me/relaxzheh" target="_blank">
+                        <img src="lurk%20squad_files/telegram-app.png" alt="Telegram" class="icon">
+                    </a>
+                    <a href="https://discord.com/users/1268710180674080879" target="_blank">
+                        <img src="lurk%20squad_files/discord-logo.png" alt="Discord" class="icon">
+                    </a>
+                </div>
+            </div>
+
+            <div class="profile-container" id="container-resting">
+                <img src="easyfiles.cc/2025/2/810152e3-40c1-4b89-a31f-f10dc56a482c/photo_2025-02-10_19-34-35.jpg" alt="resting's Profile Picture" class="profile-pic">
+                <h2 class="animated bounceInDown" id="label-resting">Resting</h2>
+                <div class="social-icons">
+                    <a href="https://t.me/aloneallday" target="_blank">
+                        <img src="lurk%20squad_files/telegram-app.png" alt="Telegram" class="icon">
+                    </a>
+                    <a href="https://discord.com/users/529471284040433667" target="_blank">
+                        <img src="lurk%20squad_files/discord-logo.png" alt="Discord" class="icon">
+                    </a>
+                </div>
+            </div>
+
+            <div class="profile-container" id="container-cobain">
+                <img src="easyfiles.cc/2025/2/651e3bc9-9138-41b3-9bae-3db27b169be0/photo_2025-02-11_15-53-49.jpg" alt="cobain's Profile Picture" class="profile-pic">
+                <h2 class="animated bounceInDown" id="label-cobain">Cobain</h2>
+                <div class="social-icons">
+                    <a href="https://t.me/misarchist" target="_blank">
+                        <img src="lurk%20squad_files/telegram-app.png" alt="Telegram" class="icon">
+                    </a>
+                    <a href="https://discord.com/users/1337542308689608789" target="_blank">
+                        <img src="lurk%20squad_files/discord-logo.png" alt="Discord" class="icon">
+                    </a>
+                </div>
+            </div>
+
+            <div class="profile-container" id="container-cross">
+                <img src="easyfiles.cc/2025/2/b1cf0a2e-68e0-4864-b5ad-85efb453e179/photo_2025-02-11_15-57-26.jpg" alt="cross's Profile Picture" class="profile-pic">
+                <h2 class="animated bounceInDown" id="label-cross">Cross</h2>
+                <div class="social-icons">
+                    <a href="https://t.me/crossboss" target="_blank">
+                        <img src="lurk%20squad_files/telegram-app.png" alt="Telegram" class="icon">
+                    </a>
+                    <a href="https://discord.com/users/1337542308689608789" target="_blank">
+                        <img src="lurk%20squad_files/discord-logo.png" alt="Discord" class="icon">
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 
     <a class="report-button" href="#" onclick="openReportMenu()">Report</a>
