--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <div class="container" id="container" style="display: none;">
         <div class="profile-row">
             <div class="profile-container" id="container-crime">
-                <img src="easyfiles.cc/2025/2/33f903f9-076a-4ff0-8d36-5840356de55a/img123.jpg" alt="crime's Profile Picture" class="profile-pic">
+                <img src="easyfiles.cc/2025/2/7798e2d4-bf5c-45b0-9fa2-0f9af08efbb7/fc1468bea16970cf0f2482d107b3c621.gif" alt="crime's Profile Picture" class="profile-pic">
                 <h2 class="animated bounceInDown" id="label-crime">Crime</h2>
                 <div class="social-icons">
                     <a href="https://t.me/crimekos" target="_blank">
@@ -306,7 +306,7 @@
                     <a href="https://t.me/aloneallday" target="_blank">
                         <img src="lurk%20squad_files/telegram-app.png" alt="Telegram" class="icon">
                     </a>
-                    <a href="https://discord.com/users/529471284040433667" target="_blank">
+                    <a href="https://discord.com/users/1337948126165602438" target="_blank">
                         <img src="lurk%20squad_files/discord-logo.png" alt="Discord" class="icon">
                     </a>
                 </div>
