--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KOS squad</title>
+    <title>KOS</title>
     <link rel="stylesheet" type="text/css" href="lurk%20squad_files/public.css">
     <link rel="stylesheet" href="lurk%20squad_files/animate.min.css">
     <link rel="icon" type="image/x-icon" href="easyfiles.cc/2025/2/c7cf721a-ac8c-42b0-9d52-b904b47567a0/O5Hm52M6Phk4xxmwCb7HbvPHKfkSK9PokM47qi6tK459uNdzgZDuo0aQtsNetv.png">
