--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
             </div>
         </div>
 
+        <div class="profile-row">
             <div class="profile-container" id="container-resting">
                 <img src="easyfiles.cc/2025/2/810152e3-40c1-4b89-a31f-f10dc56a482c/photo_2025-02-10_19-34-35.jpg" alt="resting's Profile Picture" class="profile-pic">
                 <h2 class="animated bounceInDown" id="label-resting">Resting</h2>
