--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
             border: none;
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+            background-color: transparent;
+            color: white;
         }
 
         #report-form button[type="submit"] {
