--- a/index.html
+++ b/index.html
@@ -351,6 +351,15 @@
 
     <audio id="background-music" src="lurk%20squad_files/song.mp3"></audio>
 
+    <div style="position: absolute; bottom: 20px; right: 20px;">
+        <a href="https://t.me/kosmain" target="_blank" title="KOS Announcements">
+            <img src="lurk%20squad_files/telegram-app.png" alt="Telegram" class="icon">
+        </a>
+        <a href="https://t.me/KOSPUBCHAT" target="_blank" title="KOS Public Chat">
+            <img src="lurk%20squad_files/telegram-app.png" alt="Telegram" class="icon">
+        </a>
+    </div>    
+
     <script>
         const enterButton = document.getElementById('enter-button');
         const overlay = document.getElementById('overlay');
