--- a/index.html
+++ b/index.html
@@ -247,87 +247,18 @@
 
     <div class="container" id="container" style="display: none;">
         <div class="profile-row">
-            <div class="profile-container" id="container-crime">
-                <img src="easyfiles.cc/2025/2/7798e2d4-bf5c-45b0-9fa2-0f9af08efbb7/fc1468bea16970cf0f2482d107b3c621.gif" alt="crime's Profile Picture" class="profile-pic">
-                <h2 class="animated bounceInDown" id="label-crime">Crime</h2>
+            <div class="profile-container" id="container-ziggy">
+                <img src="easyfiles.cc/2025/2/7798e2d4-bf5c-45b0-9fa2-0f9af08efbb7/fc1468bea16970cf0f2482d107b3c621.gif" alt="ziggy's Profile Picture" class="profile-pic">
+                <h2 class="animated bounceInDown" id="label-ziggy">Ziggy</h2>
                 <div class="social-icons">
-                    <a href="https://t.me/crimekos" target="_blank">
+                    <a href="https://t.me/ti_amani" target="_blank">
                         <img src="lurk%20squad_files/telegram-app.png" alt="Telegram" class="icon">
                     </a>
-                    <a href="https://discord.com/users/1306965768033796160" target="_blank">
+                    <a href="https://discord.com/users/1328493800720695316" target="_blank">
                         <img src="lurk%20squad_files/discord-logo.png" alt="Discord" class="icon">
                     </a>
                 </div>
             </div>
-
-            <div class="profile-container" id="container-coffin">
-                <img src="easyfiles.cc/2025/2/7802d9bb-b2c1-4a10-bc6c-5ac8bd7d04af/photo_2025-02-10_16-37-12.jpg" alt="Coffin's Profile Picture" class="profile-pic">
-                <h2 class="animated bounceInDown" id="label-coffin">Coffin</h2>
-                <div class="social-icons">
-                    <a href="https://t.me/coffinritual" target="_blank">
-                        <img src="lurk%20squad_files/telegram-app.png" alt="Telegram" class="icon">
-                    </a>
-                    <a href="https://discord.com/users/1338596187309215815" target="_blank">
-                        <img src="lurk%20squad_files/discord-logo.png" alt="Discord" class="icon">
-                    </a>
-                </div>
-            </div>
-
-            <div class="profile-container" id="container-cursed">
-                <img src="easyfiles.cc/2025/2/144c8a70-56a7-42e2-9680-725f72ee70d5/photo_2025-02-10_22-56-55.jpg" alt="Cursed's Profile Picture" class="profile-pic">
-                <h2 class="animated bounceInDown" id="label-cursed">Cursed</h2>
-                <div class="social-icons">
-                    <a href="https://t.me/ruinedtrust" target="_blank">
-                        <img src="lurk%20squad_files/telegram-app.png" alt="Telegram" class="icon">
-                    </a>
-                    <a href="https://discord.com/users/1337202879416504391" target="_blank">
-                        <img src="lurk%20squad_files/discord-logo.png" alt="Discord" class="icon">
-                    </a>
-                </div>
-            </div>
-        </div>
-
-        <div class="profile-row">
-            <div class="profile-container" id="container-resting">
-                <img src="easyfiles.cc/2025/2/810152e3-40c1-4b89-a31f-f10dc56a482c/photo_2025-02-10_19-34-35.jpg" alt="resting's Profile Picture" class="profile-pic">
-                <h2 class="animated bounceInDown" id="label-resting">Resting</h2>
-                <div class="social-icons">
-                    <a href="https://t.me/aloneallday" target="_blank">
-                        <img src="lurk%20squad_files/telegram-app.png" alt="Telegram" class="icon">
-                    </a>
-                    <a href="https://discord.com/users/1339013410209402984" target="_blank">
-                        <img src="lurk%20squad_files/discord-logo.png" alt="Discord" class="icon">
-                    </a>
-                </div>
-            </div>
-
-            <div class="profile-container" id="container-cobain">
-                <img src="easyfiles.cc/2025/2/651e3bc9-9138-41b3-9bae-3db27b169be0/photo_2025-02-11_15-53-49.jpg" alt="cobain's Profile Picture" class="profile-pic">
-                <h2 class="animated bounceInDown" id="label-cobain">Cobain</h2>
-                <div class="social-icons">
-                    <a href="https://t.me/misarchist" target="_blank">
-                        <img src="lurk%20squad_files/telegram-app.png" alt="Telegram" class="icon">
-                    </a>
-                    <a href="https://discord.com/users/1337542308689608789" target="_blank">
-                        <img src="lurk%20squad_files/discord-logo.png" alt="Discord" class="icon">
-                    </a>
-                </div>
-            </div>
-
-            <div class="profile-container" id="container-cross">
-                <img src="easyfiles.cc/2025/2/b1cf0a2e-68e0-4864-b5ad-85efb453e179/photo_2025-02-11_15-57-26.jpg" alt="cross's Profile Picture" class="profile-pic">
-                <h2 class="animated bounceInDown" id="label-cross">Cross</h2>
-                <div class="social-icons">
-                    <a href="https://t.me/crossboss" target="_blank">
-                        <img src="lurk%20squad_files/telegram-app.png" alt="Telegram" class="icon">
-                    </a>
-                    <a href="https://discord.com/users/1337542308689608789" target="_blank">
-                        <img src="lurk%20squad_files/discord-logo.png" alt="Discord" class="icon">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <a class="report-button" href="#" onclick="openReportMenu()">Report</a>
     <a class="stop-music-button" href="#" onclick="stopMusic()">Stop Music</a>
